src/styles/style.css
:root {
  --logo-icon-size: 48px;
  --weather-icons: 124px;
  --measurement-icons: 24px;
  --main-color: #7cc6fe;
  --seconday-color: #f1f2f3;
  --gray: #6a7b76;
  --dark: #333;
  --green: #7cea9c;
  --brown: #772f1a;
  --padding-sm: 8px;
  --padding-md: calc(var(--padding-sm) * 2);
  --font-sm: 12px;
  --font-md: calc(var(--font-sm) * 2);
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Clear Day Icon */
.clear-day-icon .cls-1 {
  fill: #f5b952;
}
.clear-day-icon .cls-2,
.clear-day-icon .cls-3,
.clear-day-icon .cls-4 {
  fill: none;
  stroke: #000;
  stroke-miterlimit: 10;
}

.clear-day-icon .cls-2,
.clear-day-icon .cls-4 {
  stroke-width: 5px;
}
.clear-day-icon .cls-3,
.clear-day-icon .cls-4 {
  stroke-linecap: round;
}
.clear-day-icon .cls-3 {
  stroke-width: 4px;
}

/* Cloudy Day */

.cloudy-icon .cls-1 {
  fill: #aac7d5;
}
.cloudy-icon .cls-2 {
  fill: #cae3f6;
}
.cloudy-icon .cls-3,
.cloudy-icon .cls-4 {
  fill: none;
  stroke: #000;
  stroke-miterlimit: 10;
  stroke-width: 4px;
}
.cloudy-icon .cls-4 {
  stroke-linecap: round;
}

/* Rainy */
.rainy-icon .cls-1 {
  fill: #aac7d5;
}
.rainy-icon .cls-2 {
  fill: #cae3f6;
}
.rainy-icon .cls-3,
.rainy-icon .cls-4 {
  fill: none;
  stroke: #000;
  stroke-miterlimit: 10;
  stroke-width: 4px;
}
.rainy-icon .cls-4 {
  stroke-linecap: round;
}

/* Partly Cloudy */

.partly-cloudy-icon .cls-1 {
  fill: #f5b952;
}
.partly-cloudy-icon .cls-2 {
  fill: #aac7d5;
}
.partly-cloudy-icon .cls-3 {
  fill: #cae3f6;
}
.partly-cloudy-icon .cls-4 {
  fill: none;
  stroke: #000;
  stroke-miterlimit: 10;
  stroke-width: 4px;
}
/* Snow */
.snow-icon .cls-1 {
  fill: #cae3f6;
}
.snow-icon .cls-2 {
  fill: #aac7d5;
}
.snow-icon .cls-3,
.snow-icon .cls-4,
.snow-icon .cls-5,
.snow-icon .cls-6 {
  fill: none;
  stroke-miterlimit: 10;
}
.snow-icon .cls-3,
.snow-icon .cls-6 {
  stroke: #000;
}
.snow-icon .cls-4,
.snow-icon .cls-5 {
  stroke: #231f20;
}
.snow-icon .cls-5 {
  stroke-linecap: round;
}
.snow-icon .cls-6 {
  stroke-width: 4px;
}
/* Fog */
.fog-icon .st0 {
  fill: none;
  stroke: #221f1f;
  stroke-width: 2.5;
  stroke-linecap: round;
  stroke-miterlimit: 10;
}
/* Wind */
.wind-icon .cls-1 {
  fill: #aac7d5;
}
.wind-icon .cls-2 {
  fill: #cae3f6;
}
.wind-icon .cls-3,
.wind-icon .cls-4 {
  fill: none;
  stroke: #000;
  stroke-miterlimit: 10;
}
.wind-icon .cls-3 {
  stroke-width: 4px;
}
.wind-icon .cls-4 {
  stroke-linecap: round;
  stroke-width: 3px;
}

/*Feels like*/

.feels-like-icon .cls-1 {
  fill: none;
}
/* Wind speed */
.wind-speed-icon path {
  fill: #aac7d5;
}
/*Precip chance*/
.precip-chance-icon path {
  fill: #aac7d5;
}
/* Container */
.container {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}
/* Header */
.header {
  display: flex;
  align-items: center;
  background-color: var(--main-color);
  gap: 8px;
  padding: var(--padding-sm);
  color: var(--seconday-color);
  box-shadow: 0 4px 10px 1px var(--gray);
}

.header svg {
  height: var(--logo-icon-size);
  width: var(--logo-icon-size);
}

.main {
  padding: var(--padding-md);
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 80px repeat(3, 1fr);
  height: clamp(600px, 100vh, 1920px);
}

/* Search bar */
.search-bar {
  display: flex;
  align-items: center;
  justify-content: center;
  grid-column: 1 / -1;
}

.search-bar form {
  width: 700px;
  height: 40px;
}

.search-bar input {
  width: inherit;
  height: inherit;
  box-shadow: 0 4px 10px 1px var(--gray);
  border-radius: var(--padding-sm);
  padding: var(--padding-sm);
  font-size: calc(var(--font-sm) * 1.3);
}

.location {
  grid-column: 1 / -1;
  grid-row: 2 / 2;
  background-color: var(--main-color);
  padding: var(--padding-md);
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.temp-icon {
  grid-column: 1 / -1;
  grid-row: 3 / 3;
  display: flex;
}

.temp-icon button {
  flex: 1;
  background-color: var(--brown);
  color: var(--seconday-color);
  padding: var(--padding-sm - 4);
  font-size: calc(var(--font-sm) * 1.5);
  border: none;
  cursor: pointer;
  border: 1px solid var(--brown);
}

.temp-icon button:hover {
  background-color: var(--green);
  color: var(--dark);
  border-color: var(--dark);
  border: 1px solid var(--dark);
}

.weather-wrapper {
  grid-column: 1 / -1;
  background-color: var(--gray);
  padding: var(--padding-md);
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: var(--padding-sm);
}

.weather-wrapper svg {
  height: var(--measurement-icons);
  width: var(--measurement-icons);
}

.icon svg {
  height: var(--weather-icons);
  width: var(--weather-icons);
  display: flex;
  align-items: center;
  justify-content: center;
}

.temp-icon.none,
.location.none,
.weather-wrapper.none {
  display: none;
}

.weather-card {
  display: grid;
  border: 1px solid var(--seconday-color);
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 3fr 2fr 1fr 1fr 1fr;
  grid-template-areas:
    "weather-icon temperature"
    "description description"
    "feels-like humidity"
    "precip wind"
    "date date";
  padding: var(--padding-sm);
  color: var(--seconday-color);
  font-size: calc(var(--font-sm) * 1.2);
}

.weather-card .icon {
  grid-area: weather-icon;
  display: flex;
  justify-content: center;
  align-items: center;
  border-right: 2px solid var(--seconday-color);
}

.weather-card .temp {
  grid-area: temperature;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: var(--font-md);
}

.weather-card .description {
  grid-area: description;
  display: flex;
  align-items: center;
}

.weather-card .feels-like {
  grid-area: feels-like;
  display: flex;
  align-items: center;
  gap: 8px;
}

.weather-card .humidity {
  grid-area: humidity;
  display: flex;
  align-items: center;
  gap: 8px;
}

.weather-card .precip-chance {
  grid-area: precip;
  display: flex;
  align-items: center;
  gap: 8px;
}

.weather-card .windspeed {
  grid-area: wind;
  display: flex;
  align-items: center;
  gap: 8px;
}

.weather-card .date {
  grid-area: date;
  display: flex;
  justify-content: center;
  align-items: center;
}

